# dot-config

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/components/: dropdown.rs  layout.rs  mod.rs  number_input.rs  preview.rs  section.rs  text_input.rs  toggle.rs  toolbar.rs
src/generators/: editorconfig.rs  emacs.rs  gitconfig.rs  inputrc.rs  mod.rs  npmrc.rs  shellrc.rs  ssh.rs  tmux.rs  vimrc.rs  wgetrc.rs
src/models/: config_state.rs  editorconfig.rs  emacs.rs  gitconfig.rs  inputrc.rs  mod.rs  npmrc.rs  schema.rs  shellrc.rs  ssh.rs  tmux.rs  vimrc.rs  wgetrc.rs
src/pages/: editorconfig.rs  emacs.rs  gitconfig.rs  home.rs  inputrc.rs  mod.rs  npmrc.rs  shellrc.rs  ssh.rs  tmux.rs  vimrc.rs  wgetrc.rs
src/parsers/: editorconfig.rs  emacs.rs  gitconfig.rs  inputrc.rs  mod.rs  npmrc.rs  shellrc.rs  ssh.rs  tmux.rs  vimrc.rs  wgetrc.rs
src/server/: detect.rs  file_ops.rs  mod.rs
style/: main.css
tests/: generator_tests.rs  parser_tests.rs
